...
        android:id="@+id/topLevelFragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/topLevelNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bus_card_surface"
        android:minHeight="64dp"
        app:itemActiveIndicatorStyle="@style/TopLevelNavigation.ActiveIndicator"
        app:itemIconSize="24dp"
...
